# multi-agent-ecosystem

./: .gitignore  README.md  azure.yaml  pyproject.toml  pyproject.toml.txt
application/backend/: app.py
application/backend/modules/agents/: data_agent.py
application/backend/modules/interfaces/: agent.py
application/backend/modules/utilities/: discover_agents.py
application/config/: config.py
application/functions/: function_app.py  process_queue.py  requirements.txt
application/functions/functions_env/: pyvenv.cfg
infra/: .terraform.lock.hcl  features.json  main.tf  terraform.tfvars  tfplan  variables.tf
infra/devbox/: custom_data.tpl
infra/modules/azurerm/resource/networkinterfaces/: main.tf  res.networkinterface.tf
infra/modules/azurerm/resource/storage/: res.storage.tf
infra/modules/azurerm/resource/subnet/: main.tf  res.subnet.tf
infra/modules/azurerm/resource/vnet/: main.tf  res.vnet.tf
infra/modules/azurerm/resource/webAppsSlots/: res.webAppsSlots.tf
infra/modules/devbox/: main.tf  res.devbox.tf
