[project]
name = "mae3"
version = "0.1.0"
description = "Multi Agent ecosystem within a secured environment that includes a linux vm jump box for dev work"
authors = [
    {name = "Brandon Campbell"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
packages = [
    { include = "application"}
]

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "azure-functions (>=1.23.0,<2.0.0)",
    "azure-ai-formrecognizer (>=3.3.3,<4.0.0)",
    "azure-identity (>=1.21.0,<2.0.0)",
    "semantic-kernel (>=1.28.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "azure-storage-queue (>=12.12.0,<13.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "azure-search-documents (>=11.5.2,<12.0.0)",
    "azure-ai-contentsafety (>=1.0.0,<2.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "azure-monitor-opentelemetry (>=1.6.7,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "azure-mgmt-cognitiveservices (>=13.6.0,<14.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "azure-ai-ml (>=1.26.2,<2.0.0)",
    "azure-cosmos (>=4.9.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pgvector (>=0.4.0,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
